[project]
name = "llm-api-gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "mr.hosseinaskarii",email = "mr.hosseinaskarii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai (>=2.43.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
